manifests/service.yaml
apiVersion: v1
kind: Service
metadata:

  labels:
    app: app
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: app
    app.kubernetes.io/name: app
    app.kubernetes.io/part-of: nginx

  name: app
  namespace: nginx
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
  - name: 8443-tcp
    port: 8443
  selector:
    app: app
    deployment: app
